Add Form's TopMost switch setting.

--- a/app.config
+++ b/app.config
@@ -63,7 +63,7 @@
                 <value>True</value>
             </setting>
             <setting name="StayTopMost" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
         </marimo.My.MySettings>
     </userSettings>
